@@ -11,6 +11,7 @@
 TASK_ID=$1
 TASK_NAME=$2
 MEMORY=$3
+YOUNG_MEMORY=$(($3*5/8))
 PERM_MEMORY=256
 LOG_DIR=$HOME/logs/polardbx-rpl/$TASK_NAME
 
@@ -45,30 +46,26 @@ export LD_LIBRARY_PATH=${BASE_HOME}/lib:${LD_LIBRARY_PATH}
 export NLS_LANG=AMERICAN_AMERICA.ZHS16GBK
 export LANG=zh_CN.GB18030
 
-if [ -f ${HOME}/bin/jdk8.sh ]; then
-    sudo sh ${HOME}/bin/jdk8.sh
-fi
 
 logback_configurationFile=${BASE_HOME}/conf/rpl-logback.xml
 
-JAVA_OPTS="${JAVA_OPTS} -server -Xms${MEMORY}m -Xmx${MEMORY}m -Xss1m -Djute.maxbuffer=10240000 -DtaskId=$TASK_ID -Dlogback.configurationFile=$logback_configurationFile"
+JAVA_OPTS="${JAVA_OPTS} -server -Xms${MEMORY}m -Xmx${MEMORY}m -Xmn${YOUNG_MEMORY}m -Xss1m -Djute.maxbuffer=10240000 -DtaskId=$TASK_ID -Dlogback.configurationFile=$logback_configurationFile"
 if [[ ! "$JVM_PARAMS" =~ "PermSize" ]]; then
   JAVA_OPTS="${JAVA_OPTS} -XX:PermSize=${PERM_MEMORY}m -XX:MaxPermSize=${PERM_MEMORY}m"
 fi
-#JAVA_OPTS="${JAVA_OPTS} -XX:NewSize=128m -XX:MaxNewSize=256m"
+#JAVA_OPTS="${JAVA_OPTS} -XX:+UseConcMarkSweepGC -XX:-UseAdaptiveSizePolicy"
 JAVA_OPTS="${JAVA_OPTS} -XX:+UseParallelGC"
-JAVA_OPTS="${JAVA_OPTS} -XX:-UseAdaptiveSizePolicy -XX:SurvivorRatio=2 -XX:NewRatio=2 -XX:ParallelGCThreads=6"
+JAVA_OPTS="${JAVA_OPTS} -XX:SurvivorRatio=2 -XX:ParallelGCThreads=6"
 JAVA_OPTS="${JAVA_OPTS} -XX:-OmitStackTraceInFastThrow"
 
 JAVA_OPTS="${JAVA_OPTS} -Djava.net.preferIPv4Stack=true"
-JAVA_OPTS="${JAVA_OPTS} -XX:+PrintGCDetails"
-JAVA_OPTS="${JAVA_OPTS} -XX:+PrintGCDateStamps"
 JAVA_OPTS="${JAVA_OPTS} -XX:+DisableExplicitGC"
-JAVA_OPTS="${JAVA_OPTS} -Xloggc:${LOG_DIR}/gc.log"
+JAVA_OPTS="${JAVA_OPTS} -Xlog:gc*:${LOG_DIR}/gc.log:time"
 JAVA_OPTS="${JAVA_OPTS} -Dmemory=${MEMORY}"
 JAVA_OPTS="${JAVA_OPTS} -Djava.util.prefs.systemRoot=${HOME}/.java -Djava.util.prefs.userRoot=${HOME}/.java/.userPrefs -Dfile.encoding=UTF-8"
 JAVA_OPTS="${JAVA_OPTS} -Dcdc.home.dir=${BASE_HOME}"
 JAVA_OPTS="${JAVA_OPTS} -Djava.io.tmpdir=/tmp/${TASK_ID}"
+JAVA_OPTS="${JAVA_OPTS} --add-exports java.base/jdk.internal.ref=ALL-UNNAMED"
 
 if [ -f /home/admin/env.properties ]; then
     for line in `cat /home/admin/env.properties`
